--- a/style.css
+++ b/style.css
@@ -19,7 +19,8 @@ img {
 }
 
 .activity {
-    margin-bottom: 20px;
+    margin-top: 100px;
+    margin-bottom: 50px;
     font-size: 36px;
     color: magenta;
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
